--- a/admin-gateway/pom.xml
+++ b/admin-gateway/pom.xml
@@ -26,6 +26,8 @@
 		<commons-io.version>2.7</commons-io.version>
 		<org.camunda.bpm.version>7.13.0</org.camunda.bpm.version>
 		<org.jadira.usertype.core.version>6.0.1.GA</org.jadira.usertype.core.version>
+		
+		<java-commons-version>1.0.1</java-commons-version>
 	</properties>
 
 	<profiles>
@@ -54,7 +56,7 @@
 		<dependency>
 			<groupId>eu.opertusmundi</groupId>
 			<artifactId>opertus-mundi-common</artifactId>
-			<version>1.0.0</version>
+			<version>${java-commons-version}</version>
 		</dependency>
 
 		<!-- Spring-Boot starter dependencies -->
