--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -112,15 +112,35 @@ opertus-mundi.default-admin.lastname=
 # Spring Cloud Feign clients
 #
 
-# Catalogue service
+# https://cloud.spring.io/spring-cloud-static/spring-cloud-openfeign/2.3.4.RELEASE/reference/html/
+#
+# In order to maintain backward compatibility, Ribbon is used as the default load-balancer 
+# implementation. However, Spring Cloud Netflix Ribbon is now in maintenance mode, so we 
+# recommend using Spring Cloud LoadBalancer instead. To do this, set the value of 
+# spring.cloud.loadbalancer.ribbon.enabled to false.
+ 
+spring.cloud.loadbalancer.ribbon.enabled=false
+
+feign.httpclient.enabled=true
+
+# Global secret for signing JWT tokens shared by all services
+opertusmundi.feign.jwt.secret=
+
+# Catalogue service (no authentication)
 opertusmundi.feign.catalogue.name=catalogue
 opertusmundi.feign.catalogue.url=
 
-# BPM server
+# BPM server (basic authentication)
 opertusmundi.feign.bpm-server.name=bpm-server
 opertusmundi.feign.bpm-server.url=
 opertusmundi.feign.bpm-server.basic-auth.username=
 opertusmundi.feign.bpm-server.basic-auth.password=
+
+# Email service (JWT token authentication)
+# Uses opertusmundi.feign.jwt.secret for signing tokens
+opertusmundi.feign.email-service.name=email-service
+opertusmundi.feign.email-service.url=
+opertusmundi.feign.email-service.jwt.subject=admin-gateway
 
 # Ingest service
 opertusmundi.feign.ingest.name=ingest-service
