--- a/admin-gateway/pom.xml
+++ b/admin-gateway/pom.xml
@@ -114,6 +114,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+    		<groupId>com.vladmihalcea</groupId>
+    		<artifactId>hibernate-types-52</artifactId>
+    	<version>2.10.2</version>
+		</dependency>	
+    
         <!-- Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
