Update configuration examples

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -16,6 +16,9 @@ spring.main.banner-mode = off
 server.address=0.0.0.0
 server.port=9080
 
+# Proxy configuration
+# server.tomcat.remoteip.protocol-header=X-Forwarded-Proto
+
 #
 # Profiles
 #
