Update java-commons version to 1.0.8

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -163,4 +163,5 @@ opertusmundi.feign.data-profiler.url=
 
 opertusmundi.file-system.temp-dir=
 opertusmundi.file-system.data-dir=
+opertusmundi.file-system.draft-dir=
 opertusmundi.file-system.asset-dir=
