Rename configuration properties

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -108,8 +108,8 @@ spring.http.multipart.max-request-size=20Mb
 
 opertus-mundi.default-admin.username=
 opertus-mundi.default-admin.password=
-opertus-mundi.default-admin.firstname=
-opertus-mundi.default-admin.lastname=
+opertus-mundi.default-admin.firstName=
+opertus-mundi.default-admin.lastName=
 
 #
 # File system
