Update configuration examples

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -7,7 +7,7 @@
 application.name=@project.name@
 application.version=@project.version@
 
-spring.main.banner-mode = off
+spring.main.banner-mode=off
 
 #
 # Server
@@ -23,51 +23,45 @@ server.port=9080
 # Profiles
 #
 
-spring.profiles.active = production
+spring.profiles.active=production
 
 #
 # Logging
 #
 
-logging.config = classpath:log4j2-testing.xml
+logging.config=classpath:log4j2-testing.xml
 
 #
 # Session
 #
 
-spring.session.store-type = JDBC
-spring.session.timeout = 7200
+spring.session.store-type=JDBC
+spring.session.timeout=7200
 
-spring.session.jdbc.initialize-schema = NEVER
+spring.session.jdbc.initialize-schema=NEVER
 
-server.servlet.session.timeout = 7200
+server.servlet.session.timeout=7200
 
 server.servlet.session.cookie.domain =
-server.servlet.session.cookie.http-only = true
-server.servlet.session.cookie.max-age = 7200
-server.servlet.session.cookie.name = sid
-server.servlet.session.cookie.path = /
-server.servlet.session.cookie.secure = false
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.max-age=7200
+server.servlet.session.cookie.name=sid
+server.servlet.session.cookie.path=/
+server.servlet.session.cookie.secure=false
 
 #
-# JPA
+# JPA / Hibernate
 #
-
-# See: https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
-spring.jpa.open-in-view = false
-
-#
-# JPA hibernate
-#
-
-spring.jpa.hibernate.ddl-auto = validate
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
-spring.jpa.properties.hibernate.hbm2ddl.auto = validate
+spring.jpa.hibernate.ddl-auto=validate
 
-# Fix PostgreSQL JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented)
-# https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#_jdbc_related_options
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = false
+# See: https://github.com/spring-projects/spring-boot/issues/7107
+# See: https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
+spring.jpa.open-in-view=false
+
+# See https://hibernate.atlassian.net/browse/HHH-6911
+spring.jpa.properties.hibernate.discriminator.ignore_explicit_for_joined=true
 
 #
 # Auditing, health, and metrics
