--- a/admin-gateway/config-example/config/application-testing.properties
+++ b/admin-gateway/config-example/config/application-testing.properties
@@ -34,11 +34,13 @@ spring.datasource.hikari.maxLifetime = 1800000
 spring.datasource.hikari.maximumPoolSize = 5
 
 #
-# JPA
+# JPA / Hibernate
 #
 
-spring.jpa.generate-ddl = true
-spring.jpa.show-sql = true
+spring.jpa.show-sql=true
 
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action = create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target = target/generated-sql/testing/schema.sql
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=target/generated-sql/testing/schema.sql
