Update java-commons version to 1.0.30

--- a/admin-gateway/config-example/config/application-development.properties
+++ b/admin-gateway/config-example/config/application-development.properties
@@ -38,3 +38,9 @@ spring.jpa.show-sql = false
 
 # https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#configurations-logging
 spring.jpa.properties.hibernate.format_sql = true
+
+#
+# Elastic Search
+# 
+
+opertusmundi.elastic.migrate-on-startup=true
