--- a/admin-gateway/.gitignore
+++ b/admin-gateway/.gitignore
@@ -26,6 +26,8 @@ docker-compose.yml
 /src/main/resources/config/*.xml
 /src/main/resources/config/*.yml
 
+/src/main/resources/config/elastic/*
+
 /src/main/resources/config.properties
 /src/main/resources/*.xml
 /src/main/resources/*.yml
