--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -113,3 +113,18 @@ opertusmundi.file-system.temp-dir=
 opertusmundi.file-system.data-dir=
 opertusmundi.file-system.draft-dir=
 opertusmundi.file-system.asset-dir=
+
+#
+# Elastic Search
+# 
+
+opertusmundi.elastic.enabled=true
+opertusmundi.elastic.migrate-on-startup=false
+
+opertusmundi.elastic.hosts[0].hostname=localhost
+opertusmundi.elastic.hosts[0].port=9200
+opertusmundi.elastic.hosts[0].scheme=http
+
+opertusmundi.elastic.asset-index.name=assets
+opertusmundi.elastic.asset-index.settings=classpath:config/elastic/assets_index/V1_0_0__settings.json
+opertusmundi.elastic.asset-index.mappings=classpath:config/elastic/assets_index/V1_0_0__mappings.json
