--- a/admin-gateway/pom.xml
+++ b/admin-gateway/pom.xml
@@ -19,8 +19,8 @@
 	<properties>
 		<frontend.skip>false</frontend.skip>
 		<frontend-maven-plugin.version>1.8.0</frontend-maven-plugin.version>
-		
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+
+		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
 
 		<commons-collections4.version>4.4</commons-collections4.version>
 		<commons-io.version>2.7</commons-io.version>
@@ -266,7 +266,7 @@
 					</execution>
 				</executions>
 			</plugin>
-		
+
 			<!-- Inject version information into the build -->
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
@@ -281,6 +281,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<skip>${git-commit-id.skip}</skip>
 					<generateGitPropertiesFile>true</generateGitPropertiesFile>
 					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
 					<includeOnlyProperties>
@@ -291,12 +292,65 @@
 					<commitIdGenerationMode>full</commitIdGenerationMode>
 				</configuration>
 			</plugin>
-			
+
+			<!-- Configure frontend build -->
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<version>${frontend-maven-plugin.version}</version>
+		
+				<configuration>
+					<skip>${frontend.skip}</skip>
+					<workingDirectory>src/main/frontend</workingDirectory>
+				</configuration>
+		
+				<executions>
+		
+					<!-- Install node and npm -->
+					<execution>
+						<id>install-node-and-npm</id>
+						<goals>
+							<goal>install-node-and-npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<nodeVersion>${node.version}</nodeVersion>
+						</configuration>
+					</execution>
+		
+					<!-- Install packages -->
+					<execution>
+						<id>npm-install</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+		
+					<!-- Build frontend -->
+					<execution>
+						<id>npm-run-build</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<arguments>run build</arguments>
+						</configuration>
+					</execution>
+		
+				</executions>
+			</plugin>
+
 			<!-- Copy React application resources -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<executions>
+					<!-- Copy resources -->
 					<execution>
 						<id>copy-frontend-resources</id>
 						<phase>process-resources</phase>
@@ -308,71 +362,42 @@
 							<resources>
 								<resource>
 									<directory>${project.basedir}/src/main/frontend/build</directory>
+									<filtering>false</filtering>
+									<excludes>
+										<exclude>index.html</exclude>
+									</excludes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<!-- Copy template -->
+					<execution>
+						<id>copy-frontend-index-html-template</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/classes/templates</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${project.basedir}/src/main/frontend/build</directory>
+									<filtering>false</filtering>
+									<includes>
+										<include>index.html</include>
+									</includes>
 								</resource>
 							</resources>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-
-			<!-- Configure front-end builds -->
-			<plugin>
-				<groupId>com.github.eirslett</groupId>
-				<artifactId>frontend-maven-plugin</artifactId>
-				<version>${frontend-maven-plugin.version}</version>
-
-				<configuration>
-					<skip>${frontend.skip}</skip>
-					<workingDirectory>src/main/frontend</workingDirectory>
-				</configuration>
-
-				<executions>
-
-					<!-- Install node and npm -->
-					<execution>
-						<id>install node and npm</id>
-						<goals>
-							<goal>install-node-and-npm</goal>
-						</goals>
-						<phase>generate-resources</phase>
-						<configuration>
-							<nodeVersion>${node.version}</nodeVersion>
-						</configuration>
-					</execution>
-
-					<!-- Install packages -->
-					<execution>
-						<id>npm install</id>
-						<goals>
-							<goal>npm</goal>
-						</goals>
-						<phase>generate-resources</phase>
-						<configuration>
-							<arguments>install</arguments>
-						</configuration>
-					</execution>
-
-					<!-- Build frontend -->
-					<execution>
-						<id>npm run build</id>
-						<goals>
-							<goal>npm</goal>
-						</goals>
-						<phase>generate-resources</phase>
-						<configuration>
-							<arguments>run build</arguments>
-						</configuration>
-					</execution>
-
-				</executions>
-			</plugin>
-
+			
 		</plugins>
 
 		<pluginManagement>
-
 			<plugins>
-
+				<!-- Disable frontend-maven-plugin in eclipse -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -380,7 +405,7 @@
 					<configuration>
 						<lifecycleMappingMetadata>
 							<pluginExecutions>
-							
+	
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>com.github.eirslett</groupId>
@@ -394,7 +419,7 @@
 										<ignore />
 									</action>
 								</pluginExecution>
-
+	
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>com.github.eirslett</groupId>
@@ -408,14 +433,14 @@
 										<ignore />
 									</action>
 								</pluginExecution>
-
+	
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
-
+	
 			</plugins>
-
+	
 		</pluginManagement>
 
 	</build>
