--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -116,13 +116,15 @@ opertusmundi.file-system.asset-dir=
 
 #
 # Elastic Search
-# 
+#
+
+spring.elasticsearch.rest.connection-timeout=1s
+spring.elasticsearch.rest.read-timeout=30s
+spring.elasticsearch.rest.sniffer.delay-after-failure=1m
+spring.elasticsearch.rest.sniffer.interval=5m
+spring.elasticsearch.rest.uris=http://localhost:9200
 
 opertusmundi.elastic.enabled=true
-opertusmundi.elastic.migrate-on-startup=false
-
-opertusmundi.elastic.hosts[0].hostname=localhost
-opertusmundi.elastic.hosts[0].port=9200
-opertusmundi.elastic.hosts[0].scheme=http
+opertusmundi.elastic.create-on-startup=false
 
 opertusmundi.elastic.asset-index.name=assets
