Update configuration examples

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -142,3 +142,9 @@ opertusmundi.camunda.datasource.hikari.connectionTimeout=30000
 opertusmundi.camunda.datasource.hikari.idleTimeout=600000
 opertusmundi.camunda.datasource.hikari.maxLifetime=1800000
 opertusmundi.camunda.datasource.hikari.maximumPoolSize=5
+
+#
+# Marketplace endpoint
+#
+
+opertusmundi.marketplace.url=
