Add billing controller actions for transfers

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -144,6 +144,15 @@ opertusmundi.camunda.datasource.hikari.maxLifetime=1800000
 opertusmundi.camunda.datasource.hikari.maximumPoolSize=5
 
 #
+# MangoPay
+#
+
+opertusmundi.payments.mangopay.base-url=https://api.mangopay.com
+opertusmundi.payments.mangopay.client-id=
+opertusmundi.payments.mangopay.client-password=
+opertusmundi.payments.mangopay.secure-mode-return-url=
+
+#
 # Marketplace endpoint
 #
 
