Update configuration examples

--- a/admin-gateway/config-example/config/application-development.properties
+++ b/admin-gateway/config-example/config/application-development.properties
@@ -2,31 +2,45 @@
 # Enable/Disable debug
 #
 
-debug = false
+debug=false
 
 #
 # Data source
 #
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/opertus-mundi
-spring.datasource.username = 
-spring.datasource.password = 
-spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/opertus-mundi
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.hikari.connectionTimeout = 30000
-spring.datasource.hikari.idleTimeout = 600000
-spring.datasource.hikari.maxLifetime = 1800000
-spring.datasource.hikari.maximumPoolSize = 5
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.maximumPoolSize=5
+
+#
+# Camunda database data source
+#
+
+opertusmundi.camunda.datasource.url=jdbc:postgresql://localhost:5432/camunda
+opertusmundi.camunda.datasource.username=
+opertusmundi.camunda.datasource.password=
+opertusmundi.camunda.datasource.driver-class-name=org.postgresql.Driver
+
+opertusmundi.camunda.datasource.hikari.connectionTimeout=30000
+opertusmundi.camunda.datasource.hikari.idleTimeout=600000
+opertusmundi.camunda.datasource.hikari.maxLifetime=1800000
+opertusmundi.camunda.datasource.hikari.maximumPoolSize=5
 
 #
 # JPA
 #
 
-spring.jpa.show-sql = false
+spring.jpa.show-sql=true
 
 #
 # JPA hibernate
 #
 
 # https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#configurations-logging
-spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.format_sql=true
