--- a/admin-gateway/config-example/config/application-production.properties
+++ b/admin-gateway/config-example/config/application-production.properties
@@ -2,12 +2,26 @@
 # Data source
 #
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/opertus-mundi
-spring.datasource.username = 
-spring.datasource.password = 
-spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/opertus-mundi
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.hikari.connectionTimeout = 30000
-spring.datasource.hikari.idleTimeout = 600000
-spring.datasource.hikari.maxLifetime = 1800000
-spring.datasource.hikari.maximumPoolSize = 15
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.maximumPoolSize=15
+
+#
+# Camunda database data source
+#
+
+opertusmundi.camunda.datasource.url=jdbc:postgresql://localhost:5432/camunda
+opertusmundi.camunda.datasource.username=
+opertusmundi.camunda.datasource.password=
+opertusmundi.camunda.datasource.driver-class-name=org.postgresql.Driver
+
+opertusmundi.camunda.datasource.hikari.connectionTimeout=30000
+opertusmundi.camunda.datasource.hikari.idleTimeout=600000
+opertusmundi.camunda.datasource.hikari.maxLifetime=1800000
+opertusmundi.camunda.datasource.hikari.maximumPoolSize=15
