--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -29,7 +29,7 @@ spring.profiles.active=production
 # Logging
 #
 
-logging.config=classpath:log4j2-testing.xml
+logging.config=classpath:log4j2.xml
 
 #
 # Session
@@ -128,20 +128,6 @@ opertusmundi.elastic.enabled=true
 opertusmundi.elastic.create-on-startup=false
 
 opertusmundi.elastic.asset-index.name=assets
-
-#
-# Camunda database data source
-#
-
-opertusmundi.camunda.datasource.url=jdbc:postgresql://localhost:5432/camunda
-opertusmundi.camunda.datasource.username=
-opertusmundi.camunda.datasource.password=
-opertusmundi.camunda.datasource.driver-class-name=org.postgresql.Driver
-
-opertusmundi.camunda.datasource.hikari.connectionTimeout=30000
-opertusmundi.camunda.datasource.hikari.idleTimeout=600000
-opertusmundi.camunda.datasource.hikari.maxLifetime=1800000
-opertusmundi.camunda.datasource.hikari.maximumPoolSize=5
 
 #
 # MangoPay
