--- a/admin-gateway/config-example/config/application-testing.properties
+++ b/admin-gateway/config-example/config/application-testing.properties
@@ -2,36 +2,56 @@
 # Server
 #
 
-server.port = 9081
+server.port=9081
 
 #
 # Logging
 #
 
-logging.config = classpath:log4j2-testing.xml
+logging.config=classpath:log4j2-testing.xml
+
+#
+# Profiles
+#
+
+spring.profiles.active=testing
 
 #
 # Session
 #
 
-spring.session.store-type = none
+spring.session.store-type=none
 
 #https://github.com/spring-projects/spring-session/issues/1257
-server.servlet.session.cookie.name = SESSION
+server.servlet.session.cookie.name=SESSION
 
 #
 # Data source
 #
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/opertus-mundi-test
-spring.datasource.username = 
-spring.datasource.password = 
-spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/opertus-mundi-test
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.hikari.connectionTimeout = 30000
-spring.datasource.hikari.idleTimeout = 600000
-spring.datasource.hikari.maxLifetime = 1800000
-spring.datasource.hikari.maximumPoolSize = 5
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.maximumPoolSize=5
+
+#
+# Camunda database data source
+#
+
+opertusmundi.camunda.datasource.url=jdbc:postgresql://localhost:5432/camunda-test
+opertusmundi.camunda.datasource.username=
+opertusmundi.camunda.datasource.password=
+opertusmundi.camunda.datasource.driver-class-name=org.postgresql.Driver
+
+opertusmundi.camunda.datasource.hikari.connectionTimeout=30000
+opertusmundi.camunda.datasource.hikari.idleTimeout=600000
+opertusmundi.camunda.datasource.hikari.maxLifetime=1800000
+opertusmundi.camunda.datasource.hikari.maximumPoolSize=5
 
 #
 # JPA / Hibernate
@@ -47,6 +67,6 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=
 
 #
 # Elastic Search
-# 
+#
 
 opertusmundi.elastic.enabled=false
