--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -113,6 +113,7 @@ opertusmundi.file-system.temp-dir=
 opertusmundi.file-system.data-dir=
 opertusmundi.file-system.draft-dir=
 opertusmundi.file-system.asset-dir=
+opertusmundi.file-system.contract-dir=
 
 #
 # Elastic Search
