--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ VERSION=1.0.0
 
 MARKETPLACE_URL=https://web.opertusmundi.internal/
 
+ADMIN_USERNAME=admin@opertusmundi.internal
+
 DATABASE_URL=jdbc:postgresql://postgres-1:5432/opertusmundi
 DATABASE_USERNAME=opertusmundi
 
