--- a/admin-gateway/resources/integration-tests/config/application.properties
+++ b/admin-gateway/resources/integration-tests/config/application.properties
@@ -41,7 +41,7 @@ spring.jackson.serialization.WRITE_DATE_TIMESTAMPS_AS_NANOSECONDS = false
 spring.http.multipart.max-file-size = 20Mb
 spring.http.multipart.max-request-size = 20Mb
 
-opertus-mundi.default-admin.username = admin
+opertus-mundi.default-admin.username = admin@example.com
 opertus-mundi.default-admin.password =
 opertus-mundi.default-admin.firstName = Admin
 opertus-mundi.default-admin.lastName = Admin
@@ -68,3 +68,5 @@ opertusmundi.payments.mangopay.client-password =
 opertusmundi.payments.mangopay.secure-mode-return-url = 
 
 opertusmundi.marketplace.url =
+
+spring.zipkin.enabled = false
