--- a/.drone.yml
+++ b/.drone.yml
@@ -41,6 +41,8 @@ steps:
     - tag
   settings:
     debug: true
+    build_args:
+    - git_commit=${DRONE_COMMIT}
     username:
       from_secret: docker_username
     password:
@@ -55,6 +57,8 @@ steps:
     - tag
   settings:
     debug: true
+    build_args:
+    - git_commit=${DRONE_COMMIT}
     username:
       from_secret: registry_username
     password:
