--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -144,3 +144,10 @@ opertusmundi.payments.mangopay.secure-mode-return-url=
 #
 
 opertusmundi.marketplace.url=
+
+# Contract PDF generation
+opertusmundi.contract.logo=classpath:contract/images/logo_topio-full-blue.png
+opertusmundi.contract.font-bold=classpath:contract/fonts/roboto-bold.ttf
+opertusmundi.contract.font-italic=classpath:contract/fonts/roboto-italic.ttf
+opertusmundi.contract.font-bold-italic=classpath:contract/fonts/roboto-bold-italic.ttf
+opertusmundi.contract.font-regular=classpath:contract/fonts/roboto-regular.ttf
