--- a/admin-gateway/resources/docker/config/application.properties
+++ b/admin-gateway/resources/docker/config/application.properties
@@ -70,3 +70,10 @@ opertusmundi.payments.mangopay.secure-mode-return-url =
 opertusmundi.marketplace.url =
 
 spring.zipkin.enabled = false
+
+opertusmundi.contract.logo = classpath:contract/images/logo_topio-full-blue.png
+opertusmundi.contract.font-bold = classpath:contract/fonts/roboto-bold.ttf
+opertusmundi.contract.font-italic = classpath:contract/fonts/roboto-italic.ttf
+opertusmundi.contract.font-bold-italic = classpath:contract/fonts/roboto-bold-italic.ttf
+opertusmundi.contract.font-regular = classpath:contract/fonts/roboto-regular.ttf
+
