Update configuration and contract model

--- a/admin-gateway/resources/integration-tests/config/application.properties
+++ b/admin-gateway/resources/integration-tests/config/application.properties
@@ -65,7 +65,7 @@ opertusmundi.elastic.asset-index.name = assets
 opertusmundi.payments.mangopay.base-url = https://api.mangopay.com
 opertusmundi.payments.mangopay.client-id =
 opertusmundi.payments.mangopay.client-password =
-opertusmundi.payments.mangopay.secure-mode-return-url = 
+opertusmundi.payments.mangopay.secure-mode-return-url =
 
 opertusmundi.marketplace.url =
 
@@ -76,4 +76,4 @@ opertusmundi.contract.font-bold = classpath:contract/fonts/roboto-bold.ttf
 opertusmundi.contract.font-italic = classpath:contract/fonts/roboto-italic.ttf
 opertusmundi.contract.font-bold-italic = classpath:contract/fonts/roboto-bold-italic.ttf
 opertusmundi.contract.font-regular = classpath:contract/fonts/roboto-regular.ttf
-opertusmundi.contract.icons = classpath:contract/images/
+opertusmundi.contract.icons = classpath:contract/icons/
