Update configuration examples

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -152,3 +152,13 @@ opertusmundi.contract.font-italic=classpath:contract/fonts/roboto-italic.ttf
 opertusmundi.contract.font-bold-italic=classpath:contract/fonts/roboto-bold-italic.ttf
 opertusmundi.contract.font-regular=classpath:contract/fonts/roboto-regular.ttf
 opertusmundi.contract.icons=classpath:contract/icons/
+
+#
+# Elastic Search for log file aggregation
+# 
+
+opertusmundi.logging.elastic.hosts[0].hostname=
+opertusmundi.logging.elastic.hosts[0].port=
+opertusmundi.logging.elastic.hosts[0].scheme=
+
+opertusmundi.logging.elastic.rsyslog-index.name=
