Update configuration examples

--- a/admin-gateway/config-example/config/application-testing.properties
+++ b/admin-gateway/config-example/config/application-testing.properties
@@ -70,3 +70,9 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=
 #
 
 opertusmundi.elastic.enabled=false
+
+#
+# Contract PDF generation
+#
+
+opertusmundi.contract.signpdf.key-store=
