--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -145,13 +145,30 @@ opertusmundi.payments.mangopay.secure-mode-return-url=
 
 opertusmundi.marketplace.url=
 
+#
 # Contract PDF generation
+#
+
 opertusmundi.contract.logo=classpath:contract/images/logo_topio-full-blue.png
 opertusmundi.contract.font-bold=classpath:contract/fonts/roboto-bold.ttf
 opertusmundi.contract.font-italic=classpath:contract/fonts/roboto-italic.ttf
 opertusmundi.contract.font-bold-italic=classpath:contract/fonts/roboto-bold-italic.ttf
 opertusmundi.contract.font-regular=classpath:contract/fonts/roboto-regular.ttf
 opertusmundi.contract.icons=classpath:contract/icons/
+opertusmundi.contract.watermark=classpath:contract/watermark/watermark.pdf
+
+# Contract PDF signing
+opertusmundi.contract.signpdf.key-store = classpath:contract/sign/signatory.p12
+opertusmundi.contract.signpdf.key-store-password = password
+opertusmundi.contract.signpdf.key-alias = keyAlias
+opertusmundi.contract.signpdf.signature-reason = Non Repudiation
+opertusmundi.contract.signpdf.signature-location = Athens, GR
+
+opertusmundi.contract.signpdf.visible-signature.rectangle = 15, 15, 155, 35
+opertusmundi.contract.signpdf.visible-signature.background-color = #E1EA9A
+opertusmundi.contract.signpdf.visible-signature.image.file = file:data/images/logos/${opertusmundi.contract.signpdf.key-alias}/logo.png
+opertusmundi.contract.signpdf.visible-signature.image.alpha = 0.75
+opertusmundi.contract.signpdf.visible-signature.image.scale-factor = 0.6
 
 #
 # Elastic Search for log file aggregation
