Update configuration examples

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -172,10 +172,46 @@ opertusmundi.contract.signpdf.visible-signature.image.scale-factor = 0.6
 
 #
 # Elastic Search for log file aggregation
-# 
+#
 
 opertusmundi.logging.elastic.hosts[0].hostname=
 opertusmundi.logging.elastic.hosts[0].port=
 opertusmundi.logging.elastic.hosts[0].scheme=
 
 opertusmundi.logging.elastic.rsyslog-index.name=
+
+#
+# OAuth2
+#
+
+spring.security.oauth2.client.provider.keycloak.authorization-uri=
+spring.security.oauth2.client.provider.keycloak.token-uri=
+spring.security.oauth2.client.provider.keycloak.jwk-set-uri=
+spring.security.oauth2.client.provider.keycloak.user-info-uri=
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=email
+
+spring.security.oauth2.client.registration.opertus-mundi.provider=keycloak
+spring.security.oauth2.client.registration.opertus-mundi.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.opertus-mundi.client-id=admin-client
+spring.security.oauth2.client.registration.opertus-mundi.client-secret=
+spring.security.oauth2.client.registration.opertus-mundi.redirect-uri=http://<host>/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.opertus-mundi.scope=openid,email,profile,roles
+
+spring.security.oauth2.client.registration.dev.provider=keycloak
+spring.security.oauth2.client.registration.dev.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.dev.client-id=admin-dev-client
+spring.security.oauth2.client.registration.dev.client-secret=
+spring.security.oauth2.client.registration.dev.redirect-uri=http://localhost:3000/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.dev.scope=openid,email,profile,roles
+
+#
+# Tracing
+#
+
+# For configuration options see:
+# https://docs.spring.io/spring-cloud-sleuth/docs/2.2.x-SNAPSHOT/reference/html/appendix.html
+
+spring.sleuth.web.additional-skip-pattern=\/|\/api-docs.*|\/swagger.*|\/assets\/.*|.+favicon.*
+
+spring.zipkin.enabled=false
+spring.zipkin.base-url=http://localhost:9411
