Update Docker recipe (support OAuth2 authentication)

--- a/admin-gateway/resources/docker/config/application.properties
+++ b/admin-gateway/resources/docker/config/application.properties
@@ -69,7 +69,21 @@ opertusmundi.payments.mangopay.secure-mode-return-url =
 
 opertusmundi.marketplace.url =
 
+#spring.security.oauth2.client.provider.default.authorization-uri =
+#spring.security.oauth2.client.provider.default.token-uri =
+#spring.security.oauth2.client.provider.default.jwk-set-uri =
+#spring.security.oauth2.client.provider.default.user-info-uri =
+#spring.security.oauth2.client.provider.default.user-name-attribute = email
+#spring.security.oauth2.client.registration.opertusmundi.provider = default
+#spring.security.oauth2.client.registration.opertusmundi.authorization-grant-type = authorization_code
+#spring.security.oauth2.client.registration.opertusmundi.client-id =
+#spring.security.oauth2.client.registration.opertusmundi.client-secret =
+#spring.security.oauth2.client.registration.opertusmundi.redirect-uri = {baseUrl}/login/oauth2/code/{registrationId}
+#spring.security.oauth2.client.registration.opertusmundi.scope = openid,email,profile,roles
+
+spring.sleuth.web.additional-skip-pattern = \/|\/api-docs.*|\/swagger.*|\/assets\/.*|.+favicon.*
 spring.zipkin.enabled = false
+spring.zipkin.base-url = http://localhost:9411
 
 opertusmundi.contract.logo = classpath:contract/images/logo_topio-full-blue.png
 opertusmundi.contract.font-bold = classpath:contract/fonts/roboto-bold.ttf
