--- a/admin-gateway/resources/integration-tests/config/application.properties
+++ b/admin-gateway/resources/integration-tests/config/application.properties
@@ -69,7 +69,9 @@ opertusmundi.payments.mangopay.secure-mode-return-url =
 
 opertusmundi.marketplace.url =
 
+spring.sleuth.web.additional-skip-pattern = \/|\/api-docs.*|\/swagger.*|\/assets\/.*|.+favicon.*
 spring.zipkin.enabled = false
+spring.zipkin.base-url = http://localhost:9411
 
 opertusmundi.contract.logo = classpath:contract/images/logo_topio-full-blue.png
 opertusmundi.contract.font-bold = classpath:contract/fonts/roboto-bold.ttf
