Update configuration examples

--- a/admin-gateway/config-example/config/feign-client.properties
+++ b/admin-gateway/config-example/config/feign-client.properties
@@ -4,14 +4,16 @@
 
 # https://cloud.spring.io/spring-cloud-static/spring-cloud-openfeign/2.3.4.RELEASE/reference/html/
 #
-# In order to maintain backward compatibility, Ribbon is used as the default load-balancer 
-# implementation. However, Spring Cloud Netflix Ribbon is now in maintenance mode, so we 
-# recommend using Spring Cloud LoadBalancer instead. To do this, set the value of 
+# In order to maintain backward compatibility, Ribbon is used as the default load-balancer
+# implementation. However, Spring Cloud Netflix Ribbon is now in maintenance mode, so we
+# recommend using Spring Cloud LoadBalancer instead. To do this, set the value of
 # spring.cloud.loadbalancer.ribbon.enabled to false.
- 
+
 spring.cloud.loadbalancer.ribbon.enabled=false
 
 feign.httpclient.enabled=true
+feign.client.config.default.connectTimeout=10000
+feign.client.config.default.readTimeout=60000
 
 # Global secret for signing JWT tokens shared by all services
 opertusmundi.feign.jwt.secret=
