--- a/admin-gateway/resources/docker/config/application.properties
+++ b/admin-gateway/resources/docker/config/application.properties
@@ -51,6 +51,7 @@ opertusmundi.file-system.data-dir = /var/local/opertusmundi/files/users
 opertusmundi.file-system.draft-dir = /var/local/opertusmundi/files/drafts
 opertusmundi.file-system.asset-dir = /var/local/opertusmundi/files/assets
 opertusmundi.file-system.contract-dir = /var/local/opertusmundi/files/contracts
+opertusmundi.file-system.invoice-dir = /var/local/opertusmundi/files/invoices
 
 spring.elasticsearch.rest.connection-timeout = 1s
 spring.elasticsearch.rest.read-timeout = 30s
