Update Spring Boot version to 2.6.6

--- a/admin-gateway/resources/docker/config/application.properties
+++ b/admin-gateway/resources/docker/config/application.properties
@@ -53,11 +53,11 @@ opertusmundi.file-system.asset-dir = /var/local/opertusmundi/files/assets
 opertusmundi.file-system.contract-dir = /var/local/opertusmundi/files/contracts
 opertusmundi.file-system.invoice-dir = /var/local/opertusmundi/files/invoices
 
-spring.elasticsearch.rest.connection-timeout = 1s
-spring.elasticsearch.rest.read-timeout = 30s
-spring.elasticsearch.rest.sniffer.delay-after-failure = 1m
-spring.elasticsearch.rest.sniffer.interval = 5m
-spring.elasticsearch.rest.uris = http://localhost:9200
+spring.elasticsearch.connection-timeout = 1s
+spring.elasticsearch.socket-timeout = 30s
+spring.elasticsearch.restclient.sniffer.delay-after-failure = 1m
+spring.elasticsearch.restclient.sniffer.interval = 5m
+spring.elasticsearch.uris = http://localhost:9200
 
 opertusmundi.elastic.enabled = true
 opertusmundi.elastic.create-on-startup = false
