--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -120,11 +120,11 @@ opertusmundi.file-system.invoice-dir=
 # Elastic Search
 #
 
-spring.elasticsearch.rest.connection-timeout=1s
-spring.elasticsearch.rest.read-timeout=30s
-spring.elasticsearch.rest.sniffer.delay-after-failure=1m
-spring.elasticsearch.rest.sniffer.interval=5m
-spring.elasticsearch.rest.uris=http://localhost:9200
+spring.elasticsearch.connection-timeout=1s
+spring.elasticsearch.socket-timeout=30s
+spring.elasticsearch.restclient.sniffer.delay-after-failure=1m
+spring.elasticsearch.restclient.sniffer.interval=5m
+spring.elasticsearch.uris=http://localhost:9200
 
 opertusmundi.elastic.enabled=true
 opertusmundi.elastic.create-on-startup=false
