--- a/admin-gateway/pom.xml
+++ b/admin-gateway/pom.xml
@@ -19,8 +19,7 @@
     <properties>
         <frontend.skip>false</frontend.skip>
         <frontend-maven-plugin.version>1.8.0</frontend-maven-plugin.version>
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
-        <commons-collections4.version>4.4</commons-collections4.version>
+        <spring-cloud.version>2021.0.1</spring-cloud.version>
         <commons-io.version>2.7</commons-io.version>
         <org.camunda.bpm.version>7.13.0</org.camunda.bpm.version>
         <org.jadira.usertype.core.version>6.0.1.GA</org.jadira.usertype.core.version>
@@ -168,7 +167,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
-		
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -178,7 +177,7 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
-		
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
@@ -202,8 +201,8 @@
 
         <dependency>
             <groupId>com.vladmihalcea</groupId>
-            <artifactId>hibernate-types-52</artifactId>
-            <version>2.10.2</version>
+            <artifactId>hibernate-types-55</artifactId>
+            <version>2.14.1</version>
         </dependency>
 
         <!-- Testing -->
@@ -234,7 +233,7 @@
 
         <!-- If packaging to WAR, mark dependency on embedded server as provided -->
 
-        <!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-tomcat</artifactId> 
+        <!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope> </dependency> -->
 
         <!-- JDBC drivers -->
@@ -297,7 +296,6 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>${commons-collections4.version}</version>
         </dependency>
 
         <dependency>
@@ -311,7 +309,7 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
-        <!-- Camunda dependencies (no engine is configured, instead we use 
+        <!-- Camunda dependencies (no engine is configured, instead we use
             DTO definitions -->
         <dependency>
             <groupId>org.camunda.bpm</groupId>
