--- a/pom.xml
+++ b/pom.xml
@@ -20,19 +20,15 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<dependency.locations.enabled>false</dependency.locations.enabled>
 		<java.version>1.8</java.version>
-
-        <!-- Node.js -->
-        <node.version>v14.17.5</node.version>
+	
+		<!-- Node.js -->
+		<node.version>v14.17.5</node.version>
 
 		<!-- Dependency versions -->
-		<hibernate.version>5.4.21.Final</hibernate.version>
-		<hibernate-spatial.version>5.4.21.Final</hibernate-spatial.version>
-		<jackson-datatype-jts.version>2.4</jackson-datatype-jts.version>
-		<log4j2.version>2.13.3</log4j2.version>
-        <org.locationtech.jts.version>1.17.1</org.locationtech.jts.version>
-        <org.locationtech.jts.spatial4j.version>0.7</org.locationtech.jts.spatial4j.version>
+		<org.locationtech.jts.version>1.18.2</org.locationtech.jts.version>
+		<org.locationtech.jts.spatial4j.version>0.8</org.locationtech.jts.spatial4j.version>
 		<postgresql.version>42.3.2</postgresql.version>
-		<spring-boot.version>2.3.4.RELEASE</spring-boot.version>
+		<spring-boot.version>2.6.6</spring-boot.version>
 
 		<java-commons.version>1.0.97</java-commons.version>
 
@@ -47,7 +43,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.RELEASE</version>
+		<version>2.6.6</version>
 		<relativePath />
 	</parent>
 
@@ -101,18 +97,6 @@
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
 				<version>${postgresql.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-core</artifactId>
-				<version>${hibernate.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-spatial</artifactId>
-				<version>${hibernate-spatial.version}</version>
 			</dependency>
 
 		</dependencies>
