--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -115,6 +115,7 @@ opertusmundi.file-system.draft-dir=
 opertusmundi.file-system.asset-dir=
 opertusmundi.file-system.contract-dir=
 opertusmundi.file-system.invoice-dir=
+opertusmundi.file-system.order-dir=
 
 #
 # Elastic Search
