--- a/admin-gateway/resources/docker/config/application.properties
+++ b/admin-gateway/resources/docker/config/application.properties
@@ -52,6 +52,7 @@ opertusmundi.file-system.draft-dir = /var/local/opertusmundi/files/drafts
 opertusmundi.file-system.asset-dir = /var/local/opertusmundi/files/assets
 opertusmundi.file-system.contract-dir = /var/local/opertusmundi/files/contracts
 opertusmundi.file-system.invoice-dir = /var/local/opertusmundi/files/invoices
+opertusmundi.file-system.order-dir = /var/local/opertusmundi/files/orders
 
 spring.elasticsearch.connection-timeout = 1s
 spring.elasticsearch.socket-timeout = 30s
