Update configuration examples

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -183,6 +183,15 @@ opertusmundi.logging.elastic.hosts[0].scheme=
 opertusmundi.logging.elastic.rsyslog-index.name=
 
 #
+# Authentication Providers (comma-separated list of authentication provider keys)
+#
+
+# forms       : Forms login using username/password
+# opertusmundi: OAuth/OpenID Connect using OpertusMundi Keycloak IDP
+
+opertusmundi.authentication-providers=forms,opertusmundi
+
+#
 # OAuth2
 #
 
