Review docker entrypoint (conditionally enable auth providers)

--- a/admin-gateway/resources/integration-tests/config/application.properties
+++ b/admin-gateway/resources/integration-tests/config/application.properties
@@ -82,3 +82,5 @@ opertusmundi.contract.font-bold-italic = classpath:contract/fonts/roboto-bold-it
 opertusmundi.contract.font-regular = classpath:contract/fonts/roboto-regular.ttf
 opertusmundi.contract.icons = classpath:contract/icons/
 opertusmundi.contract.watermark = classpath:contract/watermark/watermark.pdf
+
+opertusmundi.authentication-providers = forms
