--- a/admin-gateway/resources/docker/config/application.properties
+++ b/admin-gateway/resources/docker/config/application.properties
@@ -83,6 +83,8 @@ opertusmundi.marketplace.url =
 #spring.security.oauth2.client.registration.opertusmundi.redirect-uri = {baseUrl}/login/oauth2/code/{registrationId}
 #spring.security.oauth2.client.registration.opertusmundi.scope = openid,email,profile,roles
 
+#opertusmundi.authentication-providers = forms,opertusmundi
+
 spring.sleuth.web.additional-skip-pattern = \/|\/api-docs.*|\/swagger.*|\/assets\/.*|.+favicon.*
 spring.zipkin.enabled = false
 spring.zipkin.base-url = http://localhost:9411
