Revise Docker recipe; update config examples

--- a/admin-gateway/config-example/config/application-production.properties
+++ b/admin-gateway/config-example/config/application-production.properties
@@ -25,3 +25,20 @@ opertusmundi.camunda.datasource.hikari.connectionTimeout=30000
 opertusmundi.camunda.datasource.hikari.idleTimeout=600000
 opertusmundi.camunda.datasource.hikari.maxLifetime=1800000
 opertusmundi.camunda.datasource.hikari.maximumPoolSize=15
+
+#
+# Keycloak
+#
+
+opertusmundi.feign.keycloak.url=
+opertusmundi.feign.keycloak.realm=master
+opertusmundi.feign.keycloak.admin.refresh-token.refresh-token=
+
+opertusmundi.feign.keycloak.admin.refresh-token.refresh-token=
+opertusmundi.feign.keycloak.admin.refresh-token.retry.backoff.initial-interval-millis=2000
+opertusmundi.feign.keycloak.admin.refresh-token.retry.backoff.multiplier=2.0
+opertusmundi.feign.keycloak.admin.refresh-token.retry.backoff.max-interval-millis=360000
+opertusmundi.feign.keycloak.admin.refresh-token.retry.backoff.max=5
+
+# The Keycloak realm for clients derived from account subscriptions
+opertusmundi.account-client-service.keycloak.realm=Services
