--- a/admin-gateway/config-example/config/application-development.properties
+++ b/admin-gateway/config-example/config/application-development.properties
@@ -44,3 +44,21 @@ spring.jpa.show-sql=true
 
 # https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#configurations-logging
 spring.jpa.properties.hibernate.format_sql=true
+
+#
+# Keycloak
+#
+
+opertusmundi.feign.keycloak.url=
+opertusmundi.feign.keycloak.realm=master
+opertusmundi.feign.keycloak.admin.refresh-token.refresh-token=
+
+opertusmundi.feign.keycloak.admin.refresh-token.refresh-token=
+opertusmundi.feign.keycloak.admin.refresh-token.retry.backoff.initial-interval-millis=2000
+opertusmundi.feign.keycloak.admin.refresh-token.retry.backoff.multiplier=2.0
+opertusmundi.feign.keycloak.admin.refresh-token.retry.backoff.max-interval-millis=360000
+opertusmundi.feign.keycloak.admin.refresh-token.retry.backoff.max=5
+
+# The Keycloak realm for clients derived from account subscriptions
+opertusmundi.account-client-service.keycloak.realm=Services
+
