--- a/admin-gateway/resources/docker/config/application.properties
+++ b/admin-gateway/resources/docker/config/application.properties
@@ -96,3 +96,5 @@ opertusmundi.contract.font-bold-italic = classpath:contract/fonts/roboto-bold-it
 opertusmundi.contract.font-regular = classpath:contract/fonts/roboto-regular.ttf
 opertusmundi.contract.icons = classpath:contract/icons/
 opertusmundi.contract.watermark = classpath:contract/watermark/watermark.pdf
+
+opertusmundi.account-client-service.keycloak.realm = Services
