--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -109,13 +109,14 @@ opertus-mundi.default-admin.lastName=
 # File system
 #
 
-opertusmundi.file-system.temp-dir=
-opertusmundi.file-system.data-dir=
-opertusmundi.file-system.draft-dir=
 opertusmundi.file-system.asset-dir=
 opertusmundi.file-system.contract-dir=
+opertusmundi.file-system.data-dir=
+opertusmundi.file-system.draft-dir=
 opertusmundi.file-system.invoice-dir=
 opertusmundi.file-system.order-dir=
+opertusmundi.file-system.temp-dir=
+opertusmundi.file-system.user-service-dir=
 
 #
 # Elastic Search
