--- a/admin-gateway/resources/integration-tests/config/application.properties
+++ b/admin-gateway/resources/integration-tests/config/application.properties
@@ -53,6 +53,7 @@ opertusmundi.file-system.asset-dir = /var/local/opertusmundi/files/assets
 opertusmundi.file-system.contract-dir = /var/local/opertusmundi/files/contracts
 opertusmundi.file-system.invoice-dir = /var/local/opertusmundi/files/invoices
 opertusmundi.file-system.order-dir = /var/local/opertusmundi/files/orders
+opertusmundi.file-system.user-service-dir = /var/local/opertusmundi/files/services
 
 spring.elasticsearch.connection-timeout = 1s
 spring.elasticsearch.socket-timeout = 30s
