--- a/admin-gateway/pom.xml
+++ b/admin-gateway/pom.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
-<project
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project 
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" 
+	xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>opertus-mundi-admin-gateway</artifactId>
@@ -17,9 +18,10 @@
     </parent>
 
     <properties>
+    	<java.version>17</java.version>
         <frontend.skip>false</frontend.skip>
         <frontend-maven-plugin.version>1.8.0</frontend-maven-plugin.version>
-        <spring-cloud.version>2021.0.1</spring-cloud.version>
+        <spring-cloud.version>2021.0.3</spring-cloud.version>
         <commons-io.version>2.7</commons-io.version>
         <org.camunda.bpm.version>7.17.0</org.camunda.bpm.version>
         <org.jadira.usertype.core.version>6.0.1.GA</org.jadira.usertype.core.version>
