--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "admin-gateway/src/main/frontend"]
 	path = admin-gateway/src/main/frontend
 	url = https://github.com/OpertusMundi/frontend-admin.git
+[submodule "cli"]
+	path = cli
+	url = https://github.com/OpertusMundi/cli.git
