Update configuration examples

--- a/admin-gateway/config-example/config/application.properties
+++ b/admin-gateway/config-example/config/application.properties
@@ -20,6 +20,11 @@ server.port=9080
 # server.tomcat.remoteip.protocol-header=X-Forwarded-Proto
 
 #
+# Flyway
+#
+spring.flyway.enabled=false
+
+#
 # Profiles
 #
 
